# advent-of-code

./: .gitignore  CLAUDE.md  index.html
2015/rust/: Cargo.toml
2016/: README  elm-package.json  package.json
2016/01/: HQMap.elm  index.html  package.json
2016/02/: BathroomCode.elm  BathroomCodeDecoder.elm  elm-package.json  index.html
2016/03/: Triangles.elm  index.html
2016/04/: Room.elm  RoomList.elm  index.html
2016/05/: SecurityCode.elm  app.js  index.html
2016/06/: SantaComm.elm  index.html
2016/07/: IPv7.elm  index.html
2016/08/: DoorLock.elm  (+1 more)
2019/: .tool-versions
2020/rust/: Cargo.toml  bin_template.rs  template.rs
2020/rust/benches/: day0.rs  day3.rs  day3_benchmark.rs  day4.rs  day5.rs  day6.rs  days.rs
2020/rust/src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs
2023/rust/: Cargo.toml  Makefile  bin_template.rs
2023/rust/benches/: days.rs
2023/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs
2024/rust/: 24.mmd  Cargo.toml  bin_template.rs  template.rs
2024/rust/benches/: days.rs
2024/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
2025/: Makefile
(+211 files in other folders)
