[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jason Dew <jason.dew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false
