[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Jason Dew <jason.dew@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "days"
harness = false
