[package]
name = "aoc2024"
version = "0.1.0"
authors = ["Jason Dew <jason.dew@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
priority-queue = "2.1.1"
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "days"
harness = false
